[gd_scene load_steps=5 format=2]

[ext_resource path="res://hack.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://title/title.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="root" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.960784, 0.960784, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -30.0
margin_right = 50.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 40.0
margin_right = 50.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = 40.0
margin_right = 61.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info_label" type="Label" parent="."]
margin_left = 384.0
margin_top = 148.0
margin_right = 912.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "topsoil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
